Sección Sobre mí

--- a/index.html
+++ b/index.html
@@ -52,16 +52,35 @@
                 </div>
             </nav>
         </header>
+    </div>
 
-        <section id="jumbo">
+    <section id="jumbo">
+        <div class="jumbotron">
+        </div>
+        <br>
+        <hr>
+    </section>
 
-            <div class="jumbotron">
-
+    <div class="container">
+        <section id="sobre-mi" class="mt-5 d-none d-md-block">
+            <div class="container">
+                <h2 class="text-center">SOBRE MÍ</h2>
+                <p>Soy periodista, amante del emprendimiento y la innovación y desde hace unos pocos meses descubrí una
+                    nueva pasión: <span> La Programación!!!</span></p>
+                <p>Nunca antes tuve contacto con los códigos, de casualidad y por mi carrera sabía lo que eran las RRSS.
+                    Pero un día: "SERENDIPITY". Pensando en una de mis ideas de emprendimiento, se me ocurrió una app y
+                    desde ahí comencé a investigar acerca de ellas. Llegué a mi primer curso: Ruby on Rails, donde
+                    aprendí a
+                    realizar aplicaciones web, pero era un total desastre en el front, así que actualmente estoy en el
+                    segundo curso: Front-end, donde comienzo a ver en el resultado de mis códigos, mejores diseños. Mi
+                    meta:
+                    Aprender dos lenguajes al año. Por ahora, échale un vistazo a mi experiencia y mis trabajos
+                    académicos.
+                </p>
             </div>
-
-
         </section>
-        <section id="carrusel" class="mt-40 my-5 d-none d-md-block">
+
+        <section id="carrusel" class="mt-40 my-5">
             <div class="container">
                 <h2 class="text-center">TRABAJOS</h2>
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
