sección sobre mi- background, columnas

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
 
                     </ul>
                 </div>
+
             </nav>
+
         </header>
     </div>
+
+
 
     <section id="jumbo">
         <div class="jumbotron">
@@ -61,25 +65,43 @@
         <hr>
     </section>
 
-    <div class="container">
-        <section id="sobre-mi" class="mt-5 d-none d-md-block">
-            <div class="container">
-                <h2 class="text-center">SOBRE MÍ</h2>
-                <p>Soy periodista, amante del emprendimiento y la innovación y desde hace unos pocos meses descubrí una
-                    nueva pasión: <span> La Programación!!!</span></p>
-                <p>Nunca antes tuve contacto con los códigos, de casualidad y por mi carrera sabía lo que eran las RRSS.
-                    Pero un día: "SERENDIPITY". Pensando en una de mis ideas de emprendimiento, se me ocurrió una app y
-                    desde ahí comencé a investigar acerca de ellas. Llegué a mi primer curso: Ruby on Rails, donde
-                    aprendí a
-                    realizar aplicaciones web, pero era un total desastre en el front, así que actualmente estoy en el
-                    segundo curso: Front-end, donde comienzo a ver en el resultado de mis códigos, mejores diseños. Mi
-                    meta:
-                    Aprender dos lenguajes al año. Por ahora, échale un vistazo a mi experiencia y mis trabajos
-                    académicos.
-                </p>
-            </div>
-        </section>
 
+    <section id="sobre-mi" class="mt-5 d-none d-md-block">
+        <div class="container">
+            <h2 class="text-center">SOBRE MÍ</h2>
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <img src="../portafolio/assets/img/dani-sobremi.jpg" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <p>Soy periodista, amante del emprendimiento y la innovación y desde hace unos pocos meses
+                        descubrí una
+                        nueva pasión: <span> La Programación!!!</span></p>
+                    <p>Nunca antes tuve contacto con los códigos, de casualidad y por mi carrera, sabía lo que eran
+                        las RRSS.
+                        Pero un día: "SERENDIPITY". Pensando en una de mis ideas de emprendimiento, se me ocurrió
+                        una app y
+                        desde ahí comencé a investigar acerca de ellas. Llegué a mi primer curso: Ruby on Rails,
+                        donde
+                        aprendí a
+                        realizar aplicaciones web, pero era un total desastre en el diseño, así que actualmente
+                        estoy
+                        en el
+                        segundo curso: Front-end, donde comienzo a ver en el resultado de mis códigos, mejores
+                        diseños.</p>
+                    <p><span>Mi
+                            meta:</span>
+                        Aprender dos lenguajes al año.</p>
+
+
+                    <p><span> Por ahora, échale un vistazo a mi experiencia y mis trabajos
+                            académicos.</span></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container">
         <section id="carrusel" class="mt-40 my-5">
             <div class="container">
                 <h2 class="text-center">TRABAJOS</h2>
