--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/hoverbox.css">
+    <style type="text/css">
+a {color:#ffffff;}
+a:visited {color:#ffffff;}
+a:active {color:#ffffff;}
+a:hover {color:#ffffff;}
+</style>
 </head>
 
 <body>
@@ -111,32 +117,82 @@
         <div class="container">
             <h2 class="text-center">EXPERIENCIAS</h2>
             <div class="row">
-
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Header</div>
+                  <div class="container pequeño">
+                      <div class="card text-white bg-warning mb-3">
+                        <div class="card-header">Front-End</div>
                         <div class="card-body">
-                            <h5 class="card-title">Warning card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's
-                                content.</p>
+                            <i class="far fa-file-code fa-5x text-center my-4"></i>
+                            <p>
+                            <button type="button" class="btn btn-outline-light my-2" data-toggle="modal" data-target="#exampleModalScrollable">
+                              Ver más
+                            </button>
+                          </p>
                         </div>
+                      </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Header</div>
+                  <div class="container pequeño">
+                    <div class="card text-white bg-info mb-3">
+                        <div class="card-header">Ruby on Rails</div>
                         <div class="card-body">
-                            <h5 class="card-title">Info card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's
-                                content.</p>
+                            <img src="../portafolio/assets/img/ruby.png" alt="logo-ruby" class="imagen my-4">
+                            <p>
+                            <button type="button" class="btn btn-outline-light my-2" data-toggle="modal" data-target="#modalRuby">
+                              Ver más
+                            </button>
+                            </p>
                         </div>
                     </div>
+                  </div>
                 </div>
             </div>
+        </div>
+
+
+<!-- Modal Front-End-->
+    <div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalScrollableTitle">Experiencia en Front</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Desde el mes de enero, comencé con un curso de Front-End, gracias a Talento Digital, donde he podido aprender sobre HTML, CSS, Javascript, Git, Github, conocimientos que he podido implementar en mi proyecto personal y en "remodelar" algunos proyectos pasados.</p>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Ruby on Rails-->
+        <div class="modal fade" id="modalRuby" tabindex="-1" role="dialog" aria-labelledby="modalRubyTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalRuby">Experiencia en Ruby on Rails</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body ruby">
+                <p>En el año 2019 hice un curso de Ruby on Rails, que fue mi primer contacto con la programación, aprendí a realizar aplicaciones web y realicé mi primer proyecto personal llamado KIKI, una Escuela Virtual de Emprendimiento que sigue en construcción y a la que le estoy incorporando mis nuevos conocimientos de Front.</p>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-info" data-dismiss="modal">Cerrar</button>
+
+              </div>
+            </div>
+          </div>
         </div>
 
     </section>
