cambio de imagen jumbotron y color de cards

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@ a:hover {color:#ffffff;}
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                   <div class="container pequeño">
-                      <div class="card text-white bg-warning mb-3">
+                      <div class="card text-white bg-dark mb-3">
                         <div class="card-header">Front-End</div>
                         <div class="card-body">
                             <i class="far fa-file-code fa-5x text-center my-4"></i>
                             <p>
-                            <button type="button" class="btn btn-outline-light my-2" data-toggle="modal" data-target="#exampleModalScrollable">
+                            <button type="button" class="btn btn-outline-warning my-2" data-toggle="modal" data-target="#exampleModalScrollable">
                               Ver más
                             </button>
                           </p>
@@ -134,12 +134,12 @@ a:hover {color:#ffffff;}
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                   <div class="container pequeño">
-                    <div class="card text-white bg-info mb-3">
+                    <div class="card text-white bg-dark mb-3">
                         <div class="card-header">Ruby on Rails</div>
                         <div class="card-body">
                             <img src="../portafolio/assets/img/ruby.png" alt="logo-ruby" class="imagen my-4">
                             <p>
-                            <button type="button" class="btn btn-outline-light my-2" data-toggle="modal" data-target="#modalRuby">
+                            <button type="button" class="btn btn-outline-info my-2" data-toggle="modal" data-target="#modalRuby">
                               Ver más
                             </button>
                             </p>
