--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ a:hover {color:#ffffff;}
                             <a class="nav-link" href="#carrusel">Trabajos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contactos</a>
+                            <a class="nav-link" href="#formulario">Contactos</a>
                         </li>
 
                     </ul>
@@ -289,17 +289,14 @@ a:hover {color:#ffffff;}
                 </div>
             </div>
         </section>
-
-
     </div>
 
-    <footer>
+    <section id="formulario">
+      <div class="typeform-widget" data-url="https://danielaballesteros85.typeform.com/to/L0iGu2" style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
+      </script>
+    </section>
 
-        <div class="logo text-center">
 
-        </div>
-
-    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
