--- a/index.html
+++ b/index.html
@@ -16,11 +16,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/hoverbox.css">
     <style type="text/css">
-a {color:#ffffff;}
-a:visited {color:#ffffff;}
-a:active {color:#ffffff;}
-a:hover {color:#ffffff;}
-</style>
+        a {
+            color: #ffffff;
+        }
+
+        a:visited {
+            color: #ffffff;
+        }
+
+        a:active {
+            color: #ffffff;
+        }
+
+        a:hover {
+            color: #ffffff;
+        }
+    </style>
 </head>
 
 <body>
@@ -118,81 +129,90 @@ a:hover {color:#ffffff;}
             <h2 class="text-center">EXPERIENCIAS</h2>
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                  <div class="container pequeño">
-                      <div class="card text-white bg-dark mb-3">
-                        <div class="card-header">Front-End</div>
-                        <div class="card-body">
-                            <i class="far fa-file-code fa-5x text-center my-4"></i>
-                            <p>
-                            <button type="button" class="btn btn-outline-warning my-2" data-toggle="modal" data-target="#exampleModalScrollable">
-                              Ver más
-                            </button>
-                          </p>
+                    <div class="container pequeño">
+                        <div class="card text-white bg-dark mb-3">
+                            <div class="card-header">Front-End</div>
+                            <div class="card-body">
+                                <i class="far fa-file-code fa-5x text-center my-4"></i>
+                                <p>
+                                    <button type="button" class="btn btn-outline-warning my-2" data-toggle="modal"
+                                        data-target="#exampleModalScrollable">
+                                        Ver más
+                                    </button>
+                                </p>
+                            </div>
                         </div>
-                      </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                  <div class="container pequeño">
-                    <div class="card text-white bg-dark mb-3">
-                        <div class="card-header">Ruby on Rails</div>
-                        <div class="card-body">
-                            <img src="../portafolio/assets/img/ruby.png" alt="logo-ruby" class="imagen my-4">
-                            <p>
-                            <button type="button" class="btn btn-outline-info my-2" data-toggle="modal" data-target="#modalRuby">
-                              Ver más
-                            </button>
-                            </p>
+                    <div class="container pequeño">
+                        <div class="card text-white bg-dark mb-3">
+                            <div class="card-header">Ruby on Rails</div>
+                            <div class="card-body">
+                                <img src="../portafolio/assets/img/ruby.png" alt="logo-ruby" class="imagen my-4">
+                                <p>
+                                    <button type="button" class="btn btn-outline-info my-2" data-toggle="modal"
+                                        data-target="#modalRuby">
+                                        Ver más
+                                    </button>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                  </div>
                 </div>
             </div>
         </div>
 
 
-<!-- Modal Front-End-->
-    <div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-scrollable" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalScrollableTitle">Experiencia en Front</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p>Desde el mes de enero, comencé con un curso de Front-End, gracias a Talento Digital, donde he podido aprender sobre HTML, CSS, Javascript, Git, Github, conocimientos que he podido implementar en mi proyecto personal y en "remodelar" algunos proyectos pasados.</p>
+        <!-- Modal Front-End-->
+        <div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalScrollableTitle">Experiencia en Front</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Desde el mes de enero, comencé con un curso de Front-End, gracias a Talento Digital, donde he
+                            podido aprender sobre HTML, CSS, Javascript, Git, Github, conocimientos que he podido
+                            implementar en mi proyecto personal y en "remodelar" algunos proyectos pasados.</p>
 
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
 
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal Ruby on Rails-->
-        <div class="modal fade" id="modalRuby" tabindex="-1" role="dialog" aria-labelledby="modalRubyTitle" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-scrollable" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="modalRuby">Experiencia en Ruby on Rails</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body ruby">
-                <p>En el año 2019 hice un curso de Ruby on Rails, que fue mi primer contacto con la programación, aprendí a realizar aplicaciones web y realicé mi primer proyecto personal llamado KIKI, una Escuela Virtual de Emprendimiento que sigue en construcción y a la que le estoy incorporando mis nuevos conocimientos de Front.</p>
-
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-info" data-dismiss="modal">Cerrar</button>
-
-              </div>
+                    </div>
+                </div>
             </div>
-          </div>
+        </div>
+
+        <!-- Modal Ruby on Rails-->
+        <div class="modal fade" id="modalRuby" tabindex="-1" role="dialog" aria-labelledby="modalRubyTitle"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalRuby">Experiencia en Ruby on Rails</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body ruby">
+                        <p>En el año 2019 hice un curso de Ruby on Rails, que fue mi primer contacto con la
+                            programación, aprendí a realizar aplicaciones web y realicé mi primer proyecto personal
+                            llamado KIKI, una Escuela Virtual de Emprendimiento que sigue en construcción y a la que le
+                            estoy incorporando mis nuevos conocimientos de Front.</p>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Cerrar</button>
+
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
@@ -292,9 +312,20 @@ a:hover {color:#ffffff;}
     </div>
 
     <section id="formulario">
-      <div class="typeform-widget" data-url="https://danielaballesteros85.typeform.com/to/L0iGu2" style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
-      </script>
+        <div class="typeform-widget" data-url="https://danielaballesteros85.typeform.com/to/L0iGu2"
+            style="width: 100%; height: 400px;"></div>
+        <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })()
+        </script>
     </section>
+
+    <footer class="bg-dark text-white">
+        <div class="redes">
+            <a href="http://facebook.com"><i class="fab fa-facebook-square fa-5x"></i></a>
+            <a href="http://twitter.com"><i class="fab fa-twitter-square fa-5x"></i></a>
+            <a href="http://linkedin.com"><i class="fab fa-linkedin fa-5x"></i></a>
+            <p>DB 2020. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
 
 
