rectificación de rutas

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </ul>
                 </div>
 
-                <img src="../portafolio/assets/img/logo.png" alt="" class="img-logo">
+                <img src="/assets/img/logo.png" alt="" class="img-logo">
 
                 <div class="collapse navbar-collapse navbar-ul">
                     <ul class="navbar-nav mr-auto">
@@ -89,7 +89,7 @@
             <h2 class="text-center">SOBRE MÍ</h2>
             <div class="row">
                 <div class="col-sm-12 col-md-6 container-foto">
-                    <img id="foto" src="../portafolio/assets/img/dani-sobremi.jpg" alt="">
+                    <img id="foto" src="/assets/img/dani-sobremi.jpg" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <div class="parrafo">
@@ -149,7 +149,7 @@
                         <div class="card text-white bg-dark mb-3">
                             <div class="card-header">Ruby on Rails</div>
                             <div class="card-body">
-                                <img src="../portafolio/assets/img/ruby.png" alt="logo-ruby" class="imagen my-4">
+                                <img src="/assets/img/ruby.png" alt="logo-ruby" class="imagen my-4">
                                 <p>
                                     <button type="button" class="btn btn-outline-info my-2" data-toggle="modal"
                                         data-target="#modalRuby">
@@ -227,7 +227,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="box17">
-                                        <img src="../portafolio/assets/img/p-meet.png" alt="">
+                                        <img src="/assets/img/p-meet.png" alt="">
                                         <ul class="icon">
                                             <li><a href="proyectos/desafio_meetcoffee/index.html" data-toggle="tooltip"
                                                     data-placement="right" title="Ir a la página"><i class=" fa
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="box17">
-                                        <img src="../portafolio/assets/img/p-suricata.png" alt="">
+                                        <img src="/assets/img/p-suricata.png" alt="">
                                         <ul class="icon">
                                             <li><a href="proyectos/desafio_suricata/index.html" data-toggle="tooltip"
                                                     data-placement="right" title="Ir a la página"><i
@@ -255,9 +255,9 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="box17">
-                                        <img src="../portafolio/assets/img/p-iguana.png" alt="">
+                                        <img src="/assets/img/p-iguana.png" alt="">
                                         <ul class="icon">
-                                            <li><a href="proyectos/desafio_iguana/iguana/index.html"
+                                            <li><a href="proyectos/desafio_iguana/Iguana/index.html"
                                                     data-toggle="tooltip" data-placement="right"
                                                     title="Ir a la página"><i class="fa fa-link"></i></a></li>
                                         </ul>
@@ -274,11 +274,11 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="box17">
-                                        <img src="../portafolio/assets/img/p-cuppon.png" alt="">
+                                        <img src="/assets/img/p-cuppon.png" alt="">
                                         <ul class="icon">
                                             <li><a href="proyectos/desafio-cuppon/index.html" data-toggle="tooltip"
                                                     data-placement="right" title="Ir a la página"><i
-                                                        class="fa fa-search"></i></a></li>
+                                                        class="fa fa-link"></i></a></li>
                                         </ul>
                                         <div class="box-content">
                                             <h3 class="title">Cuppon</h3>
@@ -288,7 +288,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="box17">
-                                        <img src="../portafolio/assets/img/p-ricomida.png" alt="">
+                                        <img src="/assets/img/p-ricomida.png" alt="">
                                         <ul class="icon">
                                             <li><a href="proyectos/desafio_ricomida/index.html" data-toggle="tooltip"
                                                     data-placement="right" title="Ir a la página"><i
